spacing issues

--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body {
 	padding-top: 40vh;
 	height: 60vh;
 	display:block;
-	padding-left: 30vw;
-	padding-right: 30vw;
+	padding-left: 20vw;
+	padding-right: 20vw;
 }
 
 #moreinfo {
